--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button onclick="homeAdd3()">+3</button>
     </div>
     <div class="result-container">
-      <h3>Guest</h3>
+      <h3>Away</h3>
       <p id="guest-counter">0</p>
       <button onclick="guestAdd1()">+1</button>
       <button onclick="guestAdd2()">+2</button>
