--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button onclick="homeAdd1()">+1</button>
       <button onclick="homeAdd2()">+2</button>
       <button onclick="homeAdd3()">+3</button>
+      <div class="horizontal-line"></div>
     </div>
     <div class="result-container">
       <h3>Away</h3>
@@ -21,6 +22,7 @@
       <button onclick="guestAdd1()">+1</button>
       <button onclick="guestAdd2()">+2</button>
       <button onclick="guestAdd3()">+3</button>
+      <div class="horizontal-line"></div>
     </div>
   </div>
   <script src="index.js"></script>
